--- a/tips.html
+++ b/tips.html
@@ -43,14 +43,13 @@ function tips(){
 <h4><i>Select an option</i></h4>
 
 <form>
-    <input type="radio" id="sum" name="calculations" value="sum" onclick="chooseOp()"
-    checked >
+    <input type="radio" id="sum" name="calculations" value="sum" onclick="chooseOp()">
     <label for="sum">Sum</label></br>
-    <input type="radio" id="diff" name="calculations" onclick="chooseOp()"
-    value="difference">
+
+    <input type="radio" id="diff" name="calculations" onclick="chooseOp()"value="difference">
     <label for="diff">Difference</label></br>
-    <input type="radio" id="mult" name="calculations" onclick="chooseOp()"
-    value="product">
+    
+    <input type="radio" id="mult" name="calculations" onclick="chooseOp()"value="product">
     <label for="mult">Product</label></br>
 
 </form>
