--- a/author.html
+++ b/author.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Author</title>
-    </head>
+<head>
+    <title>Author</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+</head>
  
 <body>
 
@@ -15,7 +24,7 @@
     <label for="guess">Guess the author</label>
     <input type ="text" id="guess" autofocus> <br>
 
-    <input type="button" onclick="checkAuthor()" value="Check the guess">
+    <input type="button" id="button" onclick="checkAuthor()" value="Check the guess">
 </form>
 
 <p id="result">This is result</p>
@@ -28,19 +37,26 @@
         console.log("Getting form values")
         Authorname = document.getElementById("Authorname").value
         guess = document.getElementById("guess").value
+        result = document.getElementById("result");
 
-        if(Authorname === guess){
+        if(oops==7){
+        alert("Sorry, ran out of guesses.");
+        result.innerHTML="Sorry, ran out of guesses";
+        document.getElementById("button").style.visibility = 'hidden'; 
+        }
+        else if(Authorname === guess){
         good++;
         alert("You got it right");
+        result.innerHTML = `Right: ${good}, Wrong: ${oops}`;
         } 
         else {
         oops++;
         alert("Sorry");
+        result.innerHTML = `Right: ${good}, Wrong: ${oops}`;
         }
 
-        result = document.getElementById("result");
-        result.innerHTML = `Right: ${good}, Wrong: ${oops}`;
-}
+
+    }
 </script>
 
     <h4><i>Click on the image to change to next image</i></h4>
