--- a/tips.html
+++ b/tips.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Tips Page</title>
-    </head>
+<head>
+    <title>Tips Page</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+</head>
  
 <body>
 
@@ -48,7 +57,7 @@ function tips(){
 
     <input type="radio" id="diff" name="calculations" onclick="chooseOp()"value="difference">
     <label for="diff">Difference</label></br>
-    
+
     <input type="radio" id="mult" name="calculations" onclick="chooseOp()"value="product">
     <label for="mult">Product</label></br>
 
