--- a/author.html
+++ b/author.html
@@ -24,7 +24,7 @@
     <label for="guess">Guess the author</label>
     <input type ="text" id="guess" autofocus> <br>
 
-    <input type="button" id="button" onclick="checkAuthor()" value="Check the guess">
+    <input class="btn btn-primary" type="button" id="button" onclick="checkAuthor()" value="Check the guess">
 </form>
 
 <p id="result">This is result</p>
