--- a/cruise.html
+++ b/cruise.html
@@ -27,7 +27,7 @@
     <input type="checkbox" id="Pool Pass" name="cruise" value="False">
     <label for="Pool Pass">Pool Pass</label></br>
 
-    <input type="button" onclick="selectCruise()" value="Select a cruise">
+    <input class="btn btn-primary" type="button" onclick="selectCruise()" value="Select a cruise">
   </form>
 
 
@@ -54,7 +54,7 @@ var my_cruise = {};
     <label for="Enter price">Enter price</label>
     <input type ="text" id="Enter price" name="Pricing" autofocus> <br>
 
-    <input type="button" onclick="updateCruise()" value="Update the cruise">
+    <input class="btn btn-primary" type="button" onclick="updateCruise()" value="Update the cruise">
 </form>
 
 
