--- a/tips.html
+++ b/tips.html
@@ -24,7 +24,7 @@
     <label for="tip_percent">Enter the tip percent</label>
     <input type ="number" id="tip_percent" value="15" autofocus> <br>
 
-    <input type="button" onclick="tips()" value="Show tip">
+    <input class="btn btn-primary" type="button" onclick="tips()" value="Show tip">
 </form>
 
 
